Update LinkedIn link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://www.linkedin.com/in/jordan-karl-software-engineer/" target="_blank" class="home__social-icon">
+                            <a href="https://www.linkedin.com/in/the-jordan-karl/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin"></i>
                             </a>
 
@@ -655,7 +655,7 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://www.linkedin.com/in/jordan-karl-software-engineer/" target="_blank" class="footer__social">
+                        <a href="https://www.linkedin.com/in/the-jordan-karl/" target="_blank" class="footer__social">
                             <i class="uil uil-linkedin"></i>
                         </a>
 
