--- a/index.html
+++ b/index.html
@@ -458,6 +458,19 @@
                                 </a>                                
                             </div>
                         </div>
+
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/portfolioSSP.jpg" alt="" class="portfolio__img">
+                        
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Published Game Design</h3>
+                                <p class="portfolio__description">Spaceport Pals is a published game design for the Chicago O'Hare airport, to be used in the airport game center. Collaboratively working with a group of project managers, engineers and designers to create the game from idea to finished product for the client. Unity and C# were the main tools used in creating the game.</p>
+                                <a href="http://www.flywithbutchohare.com/SpaceportPals/index.html" class="button button--flex button--small portfolio__button">
+                                    DEMO
+                                <i class="uil uil-angle-double-right button__icon"></i>
+                                </a>                                
+                            </div>
+                        </div>
                         
                         <div class="portfolio__content grid swiper-slide">
                             <img src="assets/img/portfolio312.jpg" alt="" class="portfolio__img">
